force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/FEC_Contract_List_for_Remove_Phone__c.object-meta.xml
<CustomObject>
    <label>Contract List for Remove Phone</label>
    <nameField>
        <label>Contract List for Remove Phone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract List for Remove Phone</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>