force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Case__c.field-meta.xml
<CustomField>
    <fullName>FEC_Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Contract List for Remove Phone</relationshipLabel>
    <relationshipName>Contract_List_for_Remove_Phone</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>