force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Check_Remove_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Check_Remove_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Remove Phone</label>
    <type>Checkbox</type>
</CustomField>