force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>