force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Eligibility_Details_2__c.field-meta.xml
<CustomField>
    <fullName>FEC_Eligibility_Details_2__c</fullName>
    <description>Trường lưu các thông tin về điều kiện chấp nhận ngưng thực hiện nhắc nợ</description>
    <label>Eligibility Details 2</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>