force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>