force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Removable__c.field-meta.xml
<CustomField>
    <fullName>FEC_Removable__c</fullName>
    <label>Removable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>