force-app/main/default/objects/FEC_Contract_List_for_Remove_Phone__c/fields/FEC_Removed_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Removed_Phone_Number__c</fullName>
    <label>Removed Phone Number</label>
    <type>Phone</type>
</CustomField>